glx/testdata/invalid/invalid-assertion-claims/vocabularies/relationship-types.glx
../../../../specification/5-standard-vocabularies/relationship-types.glx